[package]
name = "fdk-aac"
version = "0.3.0"
authors = ["Hailey Somerville <hailey@hailey.lol>"]
edition = "2018"
license = "MIT"
description = "AAC encoding library binding to libfdk-aac"
homepage = "https://github.com/haileys/fdk-aac-rs"
repository = "https://github.com/haileys/fdk-aac-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fdk-aac-sys = { version = "0.3.0", path = "fdk-aac-sys" }
