[package]
name = "fdk-aac"
version = "0.4.0"
authors = ["Charlie Somerville <charlie@charlie.bz>"]
edition = "2018"
license = "MIT"
description = "AAC encoding library binding to libfdk-aac"
homepage = "https://github.com/charliesome/fdk-aac-rs"
repository = "https://github.com/charliesome/fdk-aac-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fdk-aac-sys = { version = "0.4.0", path = "fdk-aac-sys" }
