[package]
name = "fdk-aac-sys"
version = "0.1.0"
authors = ["Hailey Somerville <hailey@hailey.lol>"]
edition = "2018"
description = "FFI bindings for libfdk-aac"
homepage = "https://github.com/haileys/fdk-aac-rs"
repository = "https://github.com/haileys/fdk-aac-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
